fetched data from localstorage to display on toDos DOM to prevent lost of data after refreshing browner

--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ input[type='submit']:hover{
     border: 2px solid green;
     border-radius: 5px;
     margin: 20px;
+    transition: display 1s ease;
 }
-
 
 
 span{
