--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 }
 
 .wrapper{
-    width: 400px;
+    max-width: 400px;
     margin: 0 auto;
     text-align: center;
     background-color: white;
